# toy-raytracer-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  hittable.rs  image.rs  lib.rs  main.rs  material.rs  math.rs  ray.rs  scene.rs  sphere.rs  vec3.rs
