[package]
name = "toy-raytracer-rust"
version = "0.1.0"
authors = ["yufeiliu94@gmail.com"]
edition = "2021"

[features]
default = ["single-precision"]
single-precision = []

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
num_cpus = "1.0"
pbr = "1.0"
png = "0.17"
rand = "0.8"
rayon = "1.5"

[profile.release]
lto = true