[package]
name = "toy-raytracer-rust"
version = "0.1.0"
authors = ["yufeiliu94@gmail.com"]
edition = "2021"

[features]
default = ["single-precision"]
single-precision = []

[dependencies]
clap = { version = "4.3", features = ["derive"] }
fastrand = "2.0.0"
git-version = "0.3.5"
num_cpus = "1.16"
pbr = "1.1"
png = "0.17"
rayon = "1.7"

[profile.release]
lto = true